protocols/tests/adders/adder_d0/illegal_observation_conditional.out
error: Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input
   ┌─ adders/adder_d0/add_d0.prot:12:7
   │
12 │   if (DUT.s == 32'b0) { // this should be illegal
   │       ^^^^^ Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input

